--- a/qrb_inference_manager/CMakeLists.txt
+++ b/qrb_inference_manager/CMakeLists.txt
@@ -1,6 +1,6 @@
-# this file is for building libqrb_inference_manager.so
+# this file is for build QRB Inference Manager lib
 cmake_minimum_required(VERSION 3.8)
-project(qrb_inference_manager)
+project(qrb_inference_manager 2.0.0)
 
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 17)
@@ -13,34 +13,8 @@ endif()
 find_package(ament_cmake_auto REQUIRED)
 ament_auto_find_build_dependencies()
 
-set(QNN_SDK_ROOT /opt/QnnSDK/2.22.10.240618)
-set(QNN_SDK ${QNN_SDK_ROOT}/include/QNN/)
-set(QNN_SampleApp ${QNN_SDK_ROOT}/examples/QNN/SampleApp/src)
-
 include_directories(
-  ${QNN_SDK}
-  ${QNN_SampleApp}
-  ${QNN_SampleApp}/PAL/include/
-  ${QNN_SampleApp}/Log
-  ${QNN_SampleApp}/Utils
-  ${QNN_SampleApp}/WrapperUtils
   include
-)
-
-set(QNN_HELPER_SOURCES
-  ${QNN_SampleApp}/PAL/src/common/GetOpt.cpp
-  ${QNN_SampleApp}/PAL/src/common/StringOp.cpp
-  ${QNN_SampleApp}/PAL/src/linux/Directory.cpp
-  ${QNN_SampleApp}/PAL/src/linux/DynamicLoading.cpp
-  ${QNN_SampleApp}/PAL/src/linux/FileOp.cpp
-  ${QNN_SampleApp}/PAL/src/linux/Path.cpp
-  ${QNN_SampleApp}/Log/Logger.cpp
-  ${QNN_SampleApp}/Log/LogUtils.cpp
-  ${QNN_SampleApp}/Utils/DataUtil.cpp
-  ${QNN_SampleApp}/Utils/DynamicLoadUtil.cpp
-  ${QNN_SampleApp}/Utils/IOTensor.cpp
-  ${QNN_SampleApp}/Utils/QnnSampleAppUtils.cpp
-  ${QNN_SampleApp}/WrapperUtils/QnnWrapperUtils.cpp
 )
 
 set(SOURCES
@@ -50,8 +24,21 @@ set(SOURCES
   src/qnn_delegate_inference/qnn_delegate_inference.cpp
 )
 
-link_directories($ENV{SDK_TOP_DIR}/toolchain/install_dir/sysroots/armv8-2a-qcom-linux/lib/aarch64-oe-linux-gcc11.2)
-ament_auto_add_library(qrb_inference_manager SHARED ${QNN_HELPER_SOURCES} ${SOURCES})
-target_link_libraries(qrb_inference_manager tensorflowlite_c QnnTFLiteDelegate)
+ament_auto_add_library(qrb_inference_manager SHARED ${SOURCES})
+target_link_libraries(qrb_inference_manager tensorflow-lite QnnTFLiteDelegate)
+set_target_properties(
+  qrb_inference_manager PROPERTIES
+  VERSION ${PROJECT_VERSION}
+  SOVERSION 2
+)
+
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+
+  set(ament_cmake_copyright_FOUND TRUE)
+  set(ament_cmake_cpplint_FOUND TRUE)
+
+  ament_lint_auto_find_test_dependencies()
+endif()
 
 ament_auto_package()
