update CHANGELOG.md and CMakeLists.txt of qrb_inference_manager
Signed-off-by: Na Song <quic_nasong@quicinc.com>

--- a/qrb_inference_manager/CMakeLists.txt
+++ b/qrb_inference_manager/CMakeLists.txt
@@ -1,6 +1,5 @@
-# this file is for build QRB Inference Manager lib
 cmake_minimum_required(VERSION 3.8)
-project(qrb_inference_manager 2.0.0)
+project(qrb_inference_manager VERSION 2.0.0)
 
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 17)
@@ -12,6 +11,16 @@ endif()
 
 find_package(ament_cmake_auto REQUIRED)
 ament_auto_find_build_dependencies()
+
+set(TENSORFLOW_SOURCE_DIR "/path/to/tensorflow_source_code" CACHE PATH)
+if(NOT TENSORFLOW_SOURCE_DIR)
+  get_filename_component(TENSORFLOW_SOURCE_DIR
+    "${CMAKE_CURRENT_LIST_DIR}/../../../../" ABSOLUTE)
+endif()
+
+add_subdirectory(
+  "${TENSORFLOW_SOURCE_DIR}/tensorflow/lite"
+  "${CMAKE_CURRENT_BINARY_DIR}/tensorflow-lite" EXCLUDE_FROM_ALL)
 
 include_directories(
   include
@@ -26,6 +35,7 @@ set(SOURCES
 
 ament_auto_add_library(qrb_inference_manager SHARED ${SOURCES})
 target_link_libraries(qrb_inference_manager tensorflow-lite QnnTFLiteDelegate)
+
 set_target_properties(
   qrb_inference_manager PROPERTIES
   VERSION ${PROJECT_VERSION}
