add test packages for qrb_ros_nn_inference:  1. qrb_ros_pre_process: publish the model input data to nn node  2. qrb_ros_post_process: subscribe the output tensor from nn node
Signed-off-by: Na Song <quic_nasong@quicinc.com>

--- a/qrb_ros_nn_inference/CMakeLists.txt
+++ b/qrb_ros_nn_inference/CMakeLists.txt
@@ -18,7 +18,7 @@ include_directories(
 
 ament_auto_add_library(qrb_ros_inference_node SHARED src/qrb_ros_inference_node.cpp)
 target_link_libraries(qrb_ros_inference_node qrb_inference_manager)
-target_link_directories(qrb_ros_inference_node PRIVATE ../../install/qrb_inference_manager/lib)
+target_link_directories(qrb_ros_inference_node PRIVATE ../../../install/qrb_inference_manager/lib)
 
 rclcpp_components_register_nodes(
   qrb_ros_inference_node
