--- a/.github/workflows/quic-organization-repolinter.yml
+++ b/.github/workflows/quic-organization-repolinter.yml
@@ -1,11 +1,6 @@
 name: QuIC Organization Repolinter
 
-on:
-  push:
-    branches: [ $default-branch ]
-  pull_request:
-    branches: [ $default-branch ]
-  workflow_dispatch:
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   repolinter:
