--- a/.github/workflows/quic-organization-repolinter.yml
+++ b/.github/workflows/quic-organization-repolinter.yml
@@ -1,7 +1,5 @@
 name: QuIC Organization Repolinter
-
 on: [push, pull_request, workflow_dispatch]
-
 jobs:
   repolinter:
     runs-on: ubuntu-latest
@@ -14,12 +12,12 @@ jobs:
         with:
           files: "repolint.json"
       - name: Run Repolinter with local repolint.json
-        if: steps.check_files.outputs.files_exists == 'true'
+        if: steps.check_files.outputs.files_exists == true
         uses: todogroup/repolinter-action@v1
         with:
           config_file: "repolint.json"
       - name: Run Repolinter with default ruleset
-        if: steps.check_files.outputs.files_exists == 'false'
+        if: steps.check_files.outputs.files_exists == false
         uses: todogroup/repolinter-action@v1
         with:
           config_url: "https://raw.githubusercontent.com/quic/.github/main/repolint.json"
