--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <name>qrb_inference_manager</name>
   <version>0.1.1</version>
   <description>Dependency library of qrb_ros_nn_inference</description>
-  <maintainer email="quic_nasong@quicinc.com">Na Song</maintainer>
+  <maintainer email="nasong@qti.qualcomm.com">Na Song</maintainer>
   <license>BSD-3-Clause-Clear</license>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
