--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: ros-jazzy-qrb-inference-manager
 Section: misc
 Priority: optional
 Maintainer: Na Song <nasong@qti.qualcomm.com>
-Build-Depends: debhelper-compat(=13), ros-jazzy-ament-cmake-auto, ros-jazzy-ament-lint-auto <!nocheck>, ros-jazzy-ament-lint-common <!nocheck>
+Build-Depends: debhelper-compat(=13), ros-jazzy-ament-cmake-auto, ros-jazzy-ament-lint-auto <!nocheck>, ros-jazzy-ament-lint-common, libtensorflow-lite-c-qcom1, libtensorflow-lite-qcom-dev, libqnn-dev, libqnn1 <!nocheck>
 Homepage:
 Standards-Version: 3.9.2
 
